# junkyard

./: .gitignore  .pre-commit-config.yaml  build.gradle  build.gradle.kts  groups  project.config  settings.gradle  settings.gradle.kts
awscurl/: README.md  build.gradle  build.gradle.kts
awscurl/tools/gradle/: check.gradle
buildSrc/: build.gradle.kts
docker/mxnet/: Dockerfile.cpu  Dockerfile.cu100  Dockerfile.cu91  Dockerfile.cuda9.1  Dockerfile.cuda9.2  Dockerfile.docs  Dockerfile.scala  build_mxnet.sh  install_built_tools.sh  set_env.sh
docker/mxnet/config/: darwin-mkl.mk  darwin.mk  libmxnet.sym  libmxnet.ver  linux-cuda-mkl.mk  linux-cuda.mk  linux-mkl.mk  linux.mk
gradle/: libs.versions.toml
itext/: build.gradle.kts
jarjar/: build.gradle  build.gradle.kts
lmbench/: .gitignore  Cargo.toml
lmbench/src/: args.rs  client_wrapper.rs  jq.rs  lib.rs  main.rs  record.rs  request.rs  stats.rs
lmbench/tests/: cli_test.rs  lib_test.rs
lmmock/: .gitignore  Cargo.toml
lmmock/python/: README.md  pyproject.toml
lmmock/python/src/openai_cts/: main.py  test_compatibility.py
lmmock/src/: args.rs  chat.rs  main.rs
lmmock/tests/: test_curl.sh
misc/: gcloud_cheet_sheet.md
misc/k8s/: README.md  manifest.yaml  schema.yaml
misc/k8s/djl-serving/: Chart.yaml  values.yaml
model-zoo/: .gitignore  archive.sh  copy.sh  extract.sh
model-zoo/FERPlus/: emotion_detection_service.py  signature.json
model-zoo/alexnet/: signature.json
model-zoo/alexnet/MAR-INF/: MANIFEST.json
model-zoo/caffenet/MAR-INF/: MANIFEST.json
model-zoo/inception-bn/MAR-INF/: MANIFEST.json
model-zoo/lstm_ptb/: lstm_ptb_service.py  signature.json
model-zoo/lstm_ptb/MAR-INF/: MANIFEST.json
model-zoo/nin/MAR-INF/: MANIFEST.json
model-zoo/noop-v1.0/MAR-INF/: MANIFEST.json
model-zoo/onnx-arcface-resnet100/: arcface_service.py  helper.py  mtcnn_detector.py  signature.json
model-zoo/onnx-arcface-resnet100/MAR-INF/: MANIFEST.json
model-zoo/onnx-duc/: cityscapes_labels.py  duc_service.py  signature.json
model-zoo/onnx-duc/MAR-INF/: MANIFEST.json
model-zoo/onnx-inception_v1/: signature.json
model-zoo/onnx-inception_v1/MAR-INF/: MANIFEST.json
model-zoo/onnx-mobilenet/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet101v1/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet101v2/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet152v1/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet152v2/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet18v1/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet18v2/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet34v1/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet34v2/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet50v1/MAR-INF/: MANIFEST.json
model-zoo/onnx-resnet50v2/: signature.json
model-zoo/onnx-resnet50v2/MAR-INF/: MANIFEST.json
model-zoo/onnx-squeezenet/MAR-INF/: MANIFEST.json
model-zoo/onnx-vgg16_bn/MAR-INF/: MANIFEST.json
model-zoo/onnx-vgg19/MAR-INF/: MANIFEST.json
model-zoo/onnx-vgg19_bn/MAR-INF/: MANIFEST.json
model-zoo/resnet-152/MAR-INF/: MANIFEST.json
model-zoo/resnet-18/MAR-INF/: MANIFEST.json
model-zoo/resnet50_ssd/: README.md  signature.json
model-zoo/resnet50_ssd/MAR-INF/: MANIFEST.json
model-zoo/resnext-101-64x4d/MAR-INF/: MANIFEST.json
model-zoo/shufflenet/: signature.json
model-zoo/shufflenet/MAR-INF/: MANIFEST.json
model-zoo/squeezenet_v1.1/MAR-INF/: MANIFEST.json
model-zoo/squeezenet_v1.2/: signature.json
model-zoo/squeezenet_v1.2/MAR-INF/: MANIFEST.json
model-zoo/vgg16/MAR-INF/: MANIFEST.json
mxnet-ci/: build_mxnet.sh  clean.sh  precompile.sh  set_env.sh
mxnet-ci/dependencies/: cityhash.sh  curl.sh  eigen.sh  libjpeg-turbo.sh  libpng.sh  libtiff.sh  libzmq.sh  lz4.sh  openblas.sh  opencv.sh  openssl.sh  protobuf.sh  zlib.sh
mxnet-ci/patch/: opencv_lapack.h
pdfbox/: build.gradle.kts
ptest/: .gitattributes  .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  save_as_numpy.py  temp.py
ptest/gmail/: gmail_helper.py
ptest/huggingface/: list_models.py  padding_test.py
ptest/huggingface/SGPT-125M-weightedmean/: test.py
ptest/huggingface/action_recognition/: vit.py
ptest/huggingface/hub/: list_models.py
ptest/huggingface/inference_client/: client.py
ptest/huggingface/mordenbert/: ModernBERT-base.py
ptest/huggingface/object_detection/: trace_longformer.py
ptest/huggingface/pegasus-xsum/: trace.py
ptest/huggingface/sentiment/: german.py
ptest/huggingface/summarization/: pegasus_xsum.py
ptest/huggingface/text2text/: mbart.py
ptest/huggingface/text_embedding/: bge_m3_sparse.py  multi_qa_mpnet.py  reranker.py
ptest/huggingface/token_classification/: modern-gliner.py  ner.py  nuner-v1_orgs.py
ptest/huggingface/tts/: trace_xtts2.py
ptest/huggingface/vqa/: vqa.py
ptest/huggingface/zero-shot-classification/: bart-large-mnli.py
ptest/huggingface/zero-shot-image-classification/: clip-vit-large.py  grounding-dino-base.py
ptest/huggingface/zero-shot-object-detection/: grounding-dino-base.py  owlv2-base-patch16.py
ptest/ivalue_jit/: ivalue.py  ivalue2_jit.py  ivalue_base.py
ptest/llm/: data.json  evaluate_correctness.py  index.html  llm_sample.sh
ptest/llm/anthropic/: anthropic_test.py  image.json  pdf.json  predict.sh
ptest/llm/gemini/: gemini_test.py
ptest/markdown/: test.py
ptest/onnx/: phi-3-mini-4k-instruct.py
ptest/parquet/: parquet2csv.py
ptest/ptest/: __init__.py  cli.py  settings.py
ptest/ptest/conf/: settings.py
ptest/segment_anything2/: inference.py  main.py  sam2_predict.py  trace_sam2_img.py
ptest/skt/: .gitignore  test_scikit_learn.py  train_census.py
ptest/tensorflow_test/: export_bert.py  temp.py
ptest/tests/ptest/: test_ptest.py
ptest/tritonserver/: gen_metadata.py  infer_input.py  triton_client.py  triton_client2.py
ptest/vit/: trace_vit.py
ptest/whisper_model/: to_onnx.py  trace_whisper.py
ptest/xgb/: .gitignore  train_iris.py
ptest/yolo_test/: convert_yolo.sh  trace_yolo_worldv2.py  yolo_seg.py  yolo_worldv2.py
tools/conf/: checkstyle.xml  suppressions.xml
(+39 files in other folders)
