[package]
name = "lmbench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
indoc = "2.0.7"
jsonpath_lib = "0.3.0"
lazy_static = "1.4.0"
parking_lot = "0.12"
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokenizers = { version = "0.22.2", features = ["http"] }
tokio = { version="1.48.0" , features = ["rt-multi-thread", "macros", "fs"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"

[lib]
name = "lmbench"
path = "src/lib.rs"

[[bin]]
name = "lmbench"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7.0"
predicates = "2.1.1"
tempfile = "3.10.1"
