[package]
name = "lmbench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.8.12", optional = true }
aws-sdk-bedrock = { version = "1.128.0", optional = true }
aws-sdk-bedrockruntime = { version = "1.120.0", optional = true }
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
indoc = "2.0.7"
jsonpath_lib = "0.3.0"
lazy_static = "1.5.0"
parking_lot = "0.12"
rand = "0.9.2"
rand_distr = "0.5.1"
reqwest = { version = "0.12.28", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16.1"
tokenizers = { version = "0.22.2", features = ["http"] }
tokio = { version="1.49.0" , features = ["rt-multi-thread", "macros", "fs"]}
tracing = { version = "0.1.44", features = ["valuable"] }
valuable = { version = "0.1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "valuable"] }
tracing-appender = "0.2.4"

[lib]
name = "lmbench"
path = "src/lib.rs"

[[bin]]
name = "lmbench"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.1"
httpmock = "0.7.0"
predicates = "2.1.5"
tempfile = "3.24.0"

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrock", "dep:aws-sdk-bedrockruntime"]
